--- a/src/index.css
+++ b/src/index.css
@@ -151,14 +151,66 @@ li {
   width: 4rem;
   height: 4rem;
 }
+#navbarClose {
+  width: 3rem;
+  height: 3rem;
+}
 
-.navbar {
+header {
+  display: grid;
   position: absolute;
-  display: flex;
+  grid-auto-flow: column;
   width: 100%;
   justify-content: space-between;
   padding: 2rem 2.9rem;
   align-items: center;
+  z-index: 100;
+}
+header li a {
+  font-size: 2.2rem;
+}
+header li a:hover {
+  color: var(--color-secondary-200);
+}
+
+header .nav-btn {
+  padding: 0.5rem;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: var(--color-white-100);
+}
+
+header nav {
+  position: fixed;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  background-color: var(--color-primary-200);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
+  transition: 1s;
+  transform: translateY(-110vh);
+}
+
+.navbar li {
+  cursor: pointer;
+}
+
+header .responsive_nav {
+  transform: none;
+}
+
+nav .nav-close-btn {
+  position: absolute;
+  top: 3rem;
+  right: 3.5rem;
 }
 /****************************  HERO CONTENT  ****************************/
 .container-hero {
@@ -183,6 +235,7 @@ li {
   background-color: var(--color-primary-200);
   -webkit-animation: expandNow 2.3s cubic-bezier(0.19, 1, 0.22, 1) forwards;
   animation: expandNow 2.3s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+  z-index: -10;
 }
 @keyframes expandNow {
   0% {
@@ -236,6 +289,8 @@ li {
   animation: appearimg 1.7s cubic-bezier(0.19, 1, 0.22, 1) forwards;
   -webkit-animation-delay: 1.1s;
   animation-delay: 1.1s;
+  z-index: -10;
+  overflow: hidden;
 }
 
 @keyframes appearimg {
@@ -280,7 +335,7 @@ li {
   font-weight: 400;
   line-height: 1.32;
   font-family: inherit;
-  margin-bottom: 12rem;
+  margin-bottom: 17rem;
   color: var(--color-white-100);
 }
 .aboutus-description-thanks {
@@ -942,7 +997,7 @@ textarea::placeholder {
   }
 }
 @media only screen and (max-width: 41.75em) {
-  #navbar {
+  #navbarlogo {
     width: 3.4rem;
   }
   html {
