--- a/src/index.css
+++ b/src/index.css
@@ -167,7 +167,13 @@ header {
   z-index: 100;
 }
 header li a {
-  font-size: 2.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2.5rem;
+  font-size: 2.8rem;
+  font-weight: 800;
+  font-style: italic;
 }
 header li a:hover {
   color: var(--color-secondary-200);
@@ -219,7 +225,7 @@ nav .nav-close-btn {
 }
 .hero-slider-grid {
   display: grid;
-  grid-template-columns: 57fr 43fr;
+  grid-template-columns: 56fr 44fr;
 }
 .content {
   height: 100vh;
@@ -239,10 +245,11 @@ nav .nav-close-btn {
 }
 @keyframes expandNow {
   0% {
-    width: 0%;
+    transform: translateX(-100vw);
   }
+
   100% {
-    width: 100%;
+    transform: translateX(0vw);
   }
 }
 .content-caption {
@@ -287,20 +294,20 @@ nav .nav-close-btn {
   opacity: 0;
   -webkit-animation: appearimg 1.7s cubic-bezier(0.19, 1, 0.22, 1) forwards;
   animation: appearimg 1.7s cubic-bezier(0.19, 1, 0.22, 1) forwards;
-  -webkit-animation-delay: 1.1s;
-  animation-delay: 1.1s;
+  -webkit-animation-delay: 1.16s;
+  animation-delay: 1.16s;
   z-index: -10;
   overflow: hidden;
 }
 
 @keyframes appearimg {
   0% {
-    transform: translateX(9rem);
+    transform: translateX(5vw);
     opacity: 0;
   }
 
   100% {
-    transform: translateY(0rem);
+    transform: translateY(0vw);
     opacity: 1;
   }
 }
@@ -335,7 +342,7 @@ nav .nav-close-btn {
   font-weight: 400;
   line-height: 1.32;
   font-family: inherit;
-  margin-bottom: 17rem;
+  margin-bottom: 19rem;
   color: var(--color-white-100);
 }
 .aboutus-description-thanks {
@@ -695,7 +702,6 @@ textarea::placeholder {
   -ms-flex-pack: center;
   justify-content: center;
   color: var(--color-white-100);
-  margin-bottom: 1.5rem;
   padding: 3rem;
 }
 
@@ -713,7 +719,7 @@ textarea::placeholder {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 3.5rem;
+  gap: 1.5rem;
   color: var(--color-white-100);
 }
 
@@ -1148,7 +1154,7 @@ textarea::placeholder {
     grid-template-columns: 1fr;
   }
   .left-block-women-card {
-    min-height: 57vh;
+    min-height: 70vh;
     justify-self: center;
   }
   .right-block-women-card {
