--- a/src/index.css
+++ b/src/index.css
@@ -61,99 +61,18 @@ li {
   font-size: 1.6rem;
 }
 
-/****************************  HELPER CLASSES  ****************************/
-.sm-margin-top {
-  margin-top: 1rem;
-}
-
-.m-margin-top {
-  margin-top: 2.5rem;
-}
-
-.mdm-margin-top {
-  margin-top: 4rem;
-}
-
-.mds-margin-top {
-  margin-top: 6rem;
-}
-
-.lg-margin-top {
-  margin-top: 8rem;
-}
-
-.xlg-margin-top {
-  margin-top: 10rem;
-}
-
-.xxlg-margin-top {
-  margin-top: 14rem;
-}
-
-.md-margin-bottom {
-  margin-bottom: 1rem;
-}
-
-.mds-margin-bottom {
-  margin-bottom: 2rem;
-}
-
-.mdm-margin-bottom {
-  margin-bottom: 10rem;
-}
-
-.lg-margin-bottom {
-  margin-bottom: 15rem;
-}
-
-.xxlg-margin-bottom {
-  margin-bottom: 25rem;
-}
-
-.s-padding {
-  padding: 3.9rem;
-}
-
-.sm-padding {
-  padding: 4rem;
-}
-
-.md-padding {
-  padding: 5rem;
-}
-
-.xlg-padding {
-  padding: 10rem;
-}
-
-/****************************  LOADING ANIMATION  ****************************/
-#logos {
-  stroke-dasharray: 3284;
-  stroke-dashoffset: 3284;
-  animation: loader 15s infinite;
-}
-
-.logo-container {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-@keyframes loader {
-  to {
-    stroke-dashoffset: 0;
-  }
-}
-
 /****************************  NAVBAR  ****************************/
+#hero-logo {
+  width: 5.8rem;
+  height: 5.8rem;
+}
 #navbarlogo {
-  width: 4rem;
-  height: 4rem;
+  width: 3.6rem;
+  height: 3.6rem;
 }
 #navbarClose {
-  width: 3rem;
-  height: 3rem;
+  width: 2.65rem;
+  height: 2.65rem;
 }
 
 header {
@@ -267,23 +186,7 @@ nav .nav-close-btn {
   font-family: inherit;
   color: var(--color-white-100);
 }
-.content-button {
-  width: 20rem;
-  cursor: pointer;
-  font-size: 1.7rem;
-  font-weight: 400;
-  color: var(--color-gray-100);
-  background-color: var(--color-primary-100);
-  border: solid 1px var(--color-secondary-100);
-  min-width: 50%;
-  padding: 1.5rem;
-  outline: none;
-  font-family: inherit;
-}
-.content-button:hover {
-  color: #000;
-  background-color: var(--color-secondary-200);
-}
+
 .content-img {
   display: flex;
   margin-left: -20rem;
@@ -734,6 +637,7 @@ textarea::placeholder {
 .footer-copyrights {
   font-size: 1.2rem;
   color: var(--color-white-100);
+  margin-bottom: 1.5rem;
 }
 
 /**************************** POLICY ****************************/
@@ -921,9 +825,7 @@ textarea::placeholder {
   .content-detail {
     font-size: 1.8rem;
   }
-  .content-button {
-    width: 15rem;
-  }
+
   .content-img {
     margin-left: -10rem;
   }
@@ -958,8 +860,8 @@ textarea::placeholder {
 }
 @media only screen and (max-width: 54.375em) {
   .hero-img {
-    width: 38rem;
-    height: 40rem;
+    width: 40rem;
+    height: 42rem;
   }
   .content-img {
     margin-left: -8.5rem;
@@ -1022,7 +924,7 @@ textarea::placeholder {
     height: 100vh;
   }
   .content-img {
-    height: 60vh;
+    height: 67vh;
   }
   .content-img {
     margin-left: 0;
