--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ p {
 a {
   color: var(--color-secondary-100);
   text-decoration: none;
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   font-weight: 400;
 }
 
@@ -590,6 +590,16 @@ textarea::placeholder {
   color: var(--color-gray-100);
 }
 
+.reservation-map {
+  padding: 5rem;
+}
+
+.leaflet-container {
+  margin-top: 5rem;
+  width: 100%;
+  height: 70vh;
+}
+
 /**************************** FOOTER ****************************/
 #footer {
   background-color: var(--color-primary-200);
@@ -1004,6 +1014,9 @@ textarea::placeholder {
   }
   .container-grid-women {
     grid-template-columns: 1fr;
+  }
+  .reservation-map {
+    padding: 1rem;
   }
 }
 @media only screen and (max-width: 24.6875em) {
