--- a/src/index.css
+++ b/src/index.css
@@ -309,11 +309,35 @@ nav .nav-close-btn {
   color: var(--color-secondary-100);
   text-align: center;
   margin-top: 10rem;
+  margin-bottom: 1rem;
 }
 
-.gallery {
-  padding: 2rem;
-  margin-bottom: 7rem;
+.gallery-container {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 1rem;
+}
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 2rem;
+  margin-bottom: 5rem;
+}
+.gallery-item {
+  overflow: hidden;
+}
+.gallery-grid img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  transition: all 0.56s;
+  overflow: hidden;
+}
+
+.gallery-grid img:hover {
+  transform: scale(1.15);
 }
 
 /**************************** MENU ****************************/
@@ -371,7 +395,7 @@ nav .nav-close-btn {
 }
 
 #comment {
-  padding: 10rem;
+  padding: 5rem;
 }
 
 .comments {
@@ -893,6 +917,12 @@ textarea::placeholder {
   }
   .aboutus-description {
     font-size: 1.9rem;
+  }
+  .gallery-grid {
+    grid-template-columns: 1fr;
+  }
+  .gallery-container {
+    padding: 2rem;
   }
 }
 @media only screen and (max-width: 50.0625em) {
