--- a/src/index.css
+++ b/src/index.css
@@ -291,6 +291,11 @@ nav .nav-close-btn {
   padding: 2rem;
 }
 
+.girl-images-asp-ratio {
+  width: 100%;
+  height: 100%;
+}
+
 .right-block-women-card {
   padding: 4.5rem;
   margin-left: 7rem;
