--- a/src/index.css
+++ b/src/index.css
@@ -1078,7 +1078,11 @@ textarea::placeholder {
     padding: 1.2rem 1.5rem;
   }
   .reviews {
+    margin-left: -2rem;
     gap: 1rem;
+  }
+  .review {
+    gap: 0.25rem;
   }
   .review-pts {
     font-size: 3.6rem;
