--- a/src/index.css
+++ b/src/index.css
@@ -778,6 +778,61 @@ textarea::placeholder {
 }
 
 /**************************** MEDIA QUERIES****************************/
+@media only screen and (min-width: 85em) {
+  #hero-logo {
+    width: 10rem;
+    height: 7rem;
+  }
+  .content-caption {
+    font-size: 6.8rem;
+  }
+  .content-detail {
+    font-size: 2.8rem;
+  }
+  .caption-about {
+    font-size: 6.8rem;
+  }
+  .aboutus-description {
+    font-size: 3.6rem;
+  }
+  .women-title {
+    font-size: 6.8rem;
+  }
+  .left-block-women-card {
+    font-size: 2.8rem;
+  }
+  .caption-gallery {
+    font-size: 6.8rem;
+  }
+  .caption-menu {
+    font-size: 6.8rem;
+  }
+  .caption-testimonial {
+    font-size: 6.8rem;
+  }
+  .thoughts-caption {
+    font-size: 6.8rem;
+  }
+  .location-caption {
+    font-size: 6.8rem;
+  }
+  .location-detail {
+    font-size: 2.4rem;
+  }
+  .reservation-caption-up {
+    font-size: 6.8rem;
+  }
+  .reservation-contactus {
+    font-size: 2.4rem;
+  }
+  .footer-information {
+    font-size: 2rem;
+  }
+  .footer-copyrights {
+    font-size: 1.6rem;
+  }
+}
+
 @media only screen and (max-width: 84.5em) {
   html {
     font-size: 56.25%;
