--- a/src/index.css
+++ b/src/index.css
@@ -787,19 +787,19 @@ textarea::placeholder {
     font-size: 6.8rem;
   }
   .content-detail {
-    font-size: 2.8rem;
+    font-size: 2.6rem;
   }
   .caption-about {
     font-size: 6.8rem;
   }
   .aboutus-description {
-    font-size: 3.6rem;
+    font-size: 2.8rem;
   }
   .women-title {
     font-size: 6.8rem;
   }
   .left-block-women-card {
-    font-size: 2.8rem;
+    font-size: 2.6rem;
   }
   .caption-gallery {
     font-size: 6.8rem;
@@ -826,10 +826,13 @@ textarea::placeholder {
     font-size: 2.4rem;
   }
   .footer-information {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
   .footer-copyrights {
     font-size: 1.6rem;
+  }
+  .footer-flex-informations {
+    gap: 6rem;
   }
 }
 
